# polite-guard

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: coverity_scan.yml  trivy.yml  trivy_scan.yml
code-samples/python-transformers/: README.md  python_polite_guard_basic.py  python_polite_guard_ipywidget.py  python_polite_guard_onnxruntime.py  requirements.txt  run_examples.ipynb
code-samples/webapp-transformersjs/: README.md  webapp_polite_guard_basic.html  webapp_polite_guard_basic_ui.html
data-generator/: README.md  data-generator.ipynb  pyproject.toml  requirements.txt  sdg.py  sdg_config.py
data-generator/app/: app.py
demos/: README.md
demos/chat-messenger-webapp/: index.html
demos/personal-journal-webapp/: index.html
fine-tuner/: README.md  fine-tune.ipynb  fine-tune.py  pyproject.toml  requirements.txt
tutorials/: README.md  polite-guard-tutorials.ipynb  pyproject.toml
